# mailroom

./: .gitignore  Cargo.toml  README.md  config.toml  server.toml
database/: Cargo.toml
database/src/: err.rs  lib.rs  user.rs  user_database.rs
database/src/imf/: header.rs
mailbox/: Cargo.toml
mailbox/src/: err.rs  lib.rs  mailbox.rs
mailbox/src/imf/: header.rs  mail.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_user_table.rs  m20230228_234019_create_mail_table.rs
migrations/2022-12-31-210648_users/: up.sql
migrations/2022-12-31-213415_mail/: down.sql  up.sql
pop3/: Cargo.toml
pop3/src/: command.rs  connection.rs  err.rs  lib.rs  response.rs
src/: cli.rs  command.rs  config.rs  config_helpers.rs  connection.rs  connection_handler.rs  connection_listener.rs  err.rs  lib.rs  main.rs  response.rs  schema.rs
src/config_editor/: mod.rs  serialize.rs  tree.rs
src/database/: err.rs  mailbox.rs  mod.rs  user.rs  user_database.rs
src/database/imf/: mail.rs  mod.rs
src/database/models/: mail.rs  mod.rs  prelude.rs  user.rs
src/imf/: err.rs  header.rs  mail.rs  mod.rs
src/mailbox/: err.rs  mail.rs  mailbox.rs  mod.rs
src/pop3/: command.rs  connection.rs  err.rs  mod.rs  response.rs
src/smtp/: command.rs  connection.rs  err.rs  incoming_connection.rs  mod.rs  outgoing_connection.rs  parser.rs  reply.rs
