[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
email_address = "0.2.3"
argon2 = "0.4.1"
rand_core = { version = "0.6", features = ["std"] } # For salt generation
tokio-postgres = "0.7.7"
tokio = { version = "1", features = ["full"] }